intermediate result